--- a/MEAN-Client/src/app/projects/projects.component.html
+++ b/MEAN-Client/src/app/projects/projects.component.html
@@ -14,10 +14,17 @@
         </button>
     </div>
 </div>
+<!-- Display message if no projects found after searching -->
+<div *ngIf="filteredProjects.length === 0 && searchTerm" class="text-center text-2xl">No Projects Found</div>
 
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-6 p-6">
-    <div *ngFor="let project of filteredProjects || []">
-        <!-- Pass product data to the ProductCard component -->
-        <app-project-card [project]="project" (emitter)="deleteProject($event)"></app-project-card>
+<div *ngIf="filteredProjects.length > 0">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-6 p-6">
+        <div *ngFor="let project of filteredProjects">
+            <!-- Pass project data to the ProjectCard component -->
+            <app-project-card [project]="project"></app-project-card>
+        </div>
     </div>
 </div>
+
+<!-- Display message if no projects yet and no search term -->
+<div *ngIf="filteredProjects.length === 0 && !searchTerm" class="text-center text-2xl">No Project Yet</div>
