--- a/MEAN-Client/src/app/dashboard/dashboard.component.html
+++ b/MEAN-Client/src/app/dashboard/dashboard.component.html
@@ -1,18 +1,22 @@
 <div class="flex flex-col sm:flex-row items-center justify-between px-6">
-    <div class="flex items-center gap-2">
+    <div class="relative flex items-center gap-2">
         <input type="text" placeholder="Search..." [(ngModel)]="searchTerm"
-            class="w-full rounded-md outline-none border border-black py-1 px-2 text-black relative" />
+            class="w-[80%] md:w-[90%] h-full outline-none rounded-md px-3" />
+
         <!-- Clear button -->
         <button *ngIf="searchTerm" (click)="clearSearch()"
-            class="absolute text-black left-[25%] hover:text-gray-900 text-2xl">
+            class="text-2xl absolute opacity-90 rounded-full right-[6rem]">
             &times; <!-- Cross icon -->
         </button>
+
         <!-- Search button -->
         <button (click)="onSearch()"
-            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800">
+            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-500 rounded-lg hover:bg-blue-600">
             Search
         </button>
     </div>
+
+
     <div class="flex items-center">
         <button (click)="openFormModal()"
             class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800">
