--- a/MEAN-Client/src/app/navbar/navbar.component.html
+++ b/MEAN-Client/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <ul class="py-2" aria-labelledby="user-menu-button">
                     <li>
-                        <a href="#"
+                        <a (click)="onLogout()" 
                             class="block px-4 py-2 text-sm text-red-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
                             out</a>
                     </li>
