--- a/MEAN-Client/src/app/project-card/project-card.component.html
+++ b/MEAN-Client/src/app/project-card/project-card.component.html
@@ -1,25 +1,22 @@
-<div class="max-w-md p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+<div class="max-w-md p-6 bg-gray-100 border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ project.ProjectName }}</h5>
 
     <!-- Show partial project details -->
     <p class="mb-3 font-normal text-gray-700 dark:text-gray-400" [innerHTML]="project.Details | slice:0:48"></p>
 
-    <button (click)="openModal()"
-        class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800">
-        Read more
-    </button>
+    <button type="button" (click)="openModal()"
+        class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-500">
+        <i class="ri-eye-fill"></i> Priview</button>
 
     <!-- Show Edit and Delete buttons only if the current URL contains '/dashboard' -->
-    <button *ngIf="isDashboard" (click)="editProject()"
-        class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-blue-800 ml-4">
-        Edit
-    </button>
+    <button type="button" *ngIf="isDashboard" (click)="editProject()"
+        class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-500 ml-4">
+        <i class="ri-edit-line"></i> Edit</button>
 
-    <button *ngIf="isDashboard" (click)="emitter.emit(project._id)"
-        class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-blue-800 ml-4">
-        Delete
-    </button>
 
+    <button type="button" *ngIf="isDashboard" (click)="emitter.emit(project._id)"
+        class="text-red-700 hover:text-white border border-red-600 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center me-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">
+        <i class="ri-delete-bin-6-line"></i> Delete</button>
 
     <!-- Conditionally show the modal when isModalOpen is true -->
     <app-project-modal *ngIf="isModalOpen" [project]="selectedProject" (closeModalEvent)="closeModal()">
