--- a/MEAN-Client/src/app/register/register.component.html
+++ b/MEAN-Client/src/app/register/register.component.html
@@ -76,7 +76,10 @@
                     href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and conditions</a></label>
         </div>
 
-        <span>Already have an account? <a routerLink="/login" class="text-blue-600 hover:underline">Sign in</a></span>
+        <div class="mb-2">
+            <span>Already have an account? <a routerLink="/login" class="text-blue-600 hover:underline">Sign
+                    in</a></span>
+        </div>
 
         <button type="submit" [disabled]="signupForm.invalid"
             class="text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Register
