--- a/MEAN-Client/src/app/sign-in/sign-in.component.html
+++ b/MEAN-Client/src/app/sign-in/sign-in.component.html
@@ -58,13 +58,16 @@
             class="text-red-500 text-sm mb-5">
             You must agree to the terms and conditions
         </div>
-        <span>Don't have an account yet? <a routerLink="/register" class="text-blue-600 hover:underline">Sign
-                up</a></span>
+
+        <div class="mb-2">
+            <span>Don't have an account yet? <a routerLink="/register" class="text-blue-600 hover:underline">Sign
+                    up</a></span>
+        </div>
         <!-- Submit Button -->
         <button type="submit"
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
             [disabled]="SignInForm.invalid">
-            Register new account
+            Sign In
         </button>
     </form>
 </div>
