--- a/MEAN-Client/src/app/project-card/project-card.component.html
+++ b/MEAN-Client/src/app/project-card/project-card.component.html
@@ -6,7 +6,7 @@
 
     <button type="button" (click)="openModal()"
         class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-500">
-        <i class="ri-eye-fill"></i> Priview</button>
+        <i class="ri-eye-fill"></i> Preview</button>
 
     <!-- Show Edit and Delete buttons only if the current URL contains '/dashboard' -->
     <button type="button" *ngIf="isDashboard" (click)="editProject()"
