--- a/MEAN-Client/src/app/dashboard/dashboard.component.html
+++ b/MEAN-Client/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-col sm:flex-row items-center justify-between px-6">
+    <!-- Search Input -->
     <div class="relative flex items-center gap-2">
         <input type="text" placeholder="Search..." [(ngModel)]="searchTerm"
             class="w-[80%] md:w-[90%] h-full outline-none rounded-md px-3" />
@@ -29,18 +30,19 @@
 <app-project-form *ngIf="isFormModalOpen" [projectId]="selectedProjectId" (closeModalEvent)="closeFormModal()"
     (formSubmitEvent)="handleFormSubmit($event)"></app-project-form>
 
-<!-- Display message if no projects found after searching -->
-<div *ngIf="filteredProjects.length === 0 && searchTerm" class="text-center text-2xl">No Projects Found</div>
+<!-- If no projects found, show a message -->
+<div *ngIf="(filteredProjects | searchProject: searchTerm).length === 0 && searchTerm" class="text-center text-2xl">
+    No Projects Found
+</div>
 
-<div *ngIf="filteredProjects.length > 0">
+<!-- If projects exist, display them -->
+<div *ngIf="(filteredProjects | searchProject: searchTerm).length > 0">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-6 p-6">
-        <div *ngFor="let project of filteredProjects">
-            <!-- Pass project data to the ProjectCard component -->
+        <!-- Filtered projects will be displayed here using the pipe -->
+        <div *ngFor="let project of filteredProjects | searchProject: searchTerm">
             <app-project-card [project]="project" (emitter)="deleteProject($event)"
-                (editProjectEvent)="openEditForm($event)"></app-project-card>
+                (editProjectEvent)="openEditForm($event)">
+            </app-project-card>
         </div>
     </div>
 </div>
-
-<!-- Display message if no projects yet and no search term -->
-<div *ngIf="filteredProjects.length === 0 && !searchTerm" class="text-center text-2xl">No Project Yet</div>
