--- a/MEAN-Client/src/app/project-query/project-query.component.html
+++ b/MEAN-Client/src/app/project-query/project-query.component.html
@@ -31,17 +31,16 @@
     </div>
 
     <!-- Form for submitting new queries -->
-    <form [formGroup]="queryForm" (ngSubmit)="onSubmit()"
-        class="fixed bottom-0 left-0 right-0 bg-white px-4 py-4 shadow-lg">
-        <div class="flex justify-center items-center gap-2">
+    <form [formGroup]="queryForm" (ngSubmit)="onSubmit()" class="fixed bottom-0 left-0 right-0 bg-white shadow-lg">
+        <div class="flex justify-center items-center px-2 gap-2">
             <div class="w-[85%]">
                 <editor class="w-full" formControlName="query" apiKey="81h2pcaim7npiajvctk9bdqg3emnrg06d36c7k9lklz1adio"
                     [init]="{
-                            height: 150,
+                            height: 130,
                             width: '100%',
                             menubar: false,
-                            plugins: 'link image code',
-                            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat ',
+                            plugins: 'link code',
+                            toolbar: 'undo redo | bold italic underline strikethrough | spellcheckdialog a11ycheck typography | removeformat ',
                         }">
                 </editor>
                 <div *ngIf="queryForm.invalid && queryForm.get('query')?.touched" class="text-red-500 mt-2">
@@ -49,9 +48,8 @@
                 </div>
             </div>
             <button type="submit" [disabled]="queryForm.invalid"
-                class="mt-2 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800">
-                Submit Query
-            </button>
+                class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-500">
+                <i class="ri-send-plane-line"></i></button>
         </div>
     </form>
 </div>
