--- a/MEAN-Client/src/app/dashboard/dashboard.component.html
+++ b/MEAN-Client/src/app/dashboard/dashboard.component.html
@@ -30,13 +30,18 @@
 <app-project-form *ngIf="isFormModalOpen" [projectId]="selectedProjectId" (closeModalEvent)="closeFormModal()"
     (formSubmitEvent)="handleFormSubmit($event)"></app-project-form>
 
-<!-- If no projects found, show a message -->
-<div *ngIf="(filteredProjects | searchProject: searchTerm).length === 0 && searchTerm" class="text-center text-2xl">
+<!-- Show message when no projects are found (for search and initial load) -->
+<div *ngIf="(filteredProjects | searchProject: searchTerm).length === 0 && !searchTerm"
+    class="text-center text-xl mt-10">
     No Projects Found
+</div>
+<div *ngIf="(filteredProjects | searchProject: searchTerm).length === 0 && searchTerm"
+    class="text-center text-xl mt-10">
+    No Projects Found matching your search
 </div>
 
 <!-- If projects exist, display them -->
-<div *ngIf="(filteredProjects | searchProject: searchTerm).length > 0">
+<div *ngIf="(filteredProjects).length > 0">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-6 p-6">
         <!-- Filtered projects will be displayed here using the pipe -->
         <div *ngFor="let project of filteredProjects | searchProject: searchTerm">
