Implemented Auth Middleware and HttpInterceptor and updated styles

--- a/MEAN-Client/src/styles.css
+++ b/MEAN-Client/src/styles.css
@@ -25,5 +25,18 @@ body {
     margin: 0;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.hideScrollbar::-webkit-scrollbar {
+    display: none;
+    scrollbar-width: none;
+    scroll-behavior: auto;
+}
