--- a/MEAN-Client/src/app/project-modal/project-modal.component.html
+++ b/MEAN-Client/src/app/project-modal/project-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal fixed inset-0 bg-[#38363675] flex items-start justify-center overflow-auto py-4">
+<div class="modal fixed inset-0 bg-[#38363675] flex items-start justify-center overflow-auto py-4 hideScrollbar">
     <div class="relative bg-white p-6 rounded-lg shadow-lg max-w-3xl w-full dark:bg-gray-800 dark:text-white">
         <!-- Close Button -->
         <button class="absolute right-4 top-4 text-xl" (click)="closeModal()">
