--- a/MEAN-Client/src/app/reply-query/reply-query.component.html
+++ b/MEAN-Client/src/app/reply-query/reply-query.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto px-4 flex flex-col min-h-screen justify-between">
     <!-- Display the Project Name -->
-    <h2 class="text-2xl font-bold mb-4" [innerHTML]="queryText"></h2>
+    <h3 class="text-xl" [innerHTML]="queryText"></h3>
 
     <!-- Queries Section -->
     <div class="flex-grow">
