--- a/MEAN-Client/src/app/project-query/project-query.component.html
+++ b/MEAN-Client/src/app/project-query/project-query.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto px-4 flex flex-col min-h-screen justify-between">
-    
+
     <h2 class="text-2xl font-bold mb-4">Project Queries</h2>
 
     <!-- Queries Section -->
@@ -47,7 +47,7 @@
                     Query is required and must not be empty.
                 </div>
             </div>
-            <button type="submit" [disabled]="queryForm.invalid"
+            <button type="submit"
                 class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-500">
                 <i class="ri-send-plane-line"></i></button>
         </div>
