--- a/MEAN-Client/src/app/reply-query/reply-query.component.html
+++ b/MEAN-Client/src/app/reply-query/reply-query.component.html
@@ -40,7 +40,7 @@
                     Query is required and must not be empty.
                 </div>
             </div>
-            <button type="submit" [disabled]="queryForm.invalid"
+            <button type="submit"
                 class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-500">
                 <i class="ri-send-plane-line"></i></button>
         </div>
